# zetta_utils

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CLAUDE.md  README.md  README.rst  __init__.py  build_image.py  build_image_pcg_listener.py  build_image_segment_update_worker.py  build_image_skeleton_update_worker.py  build_image_web.py  build_image_web_gpu.py  build_web_api.py  build_web_api_cached.py  check_submodule_version.sh  compile_waterz  constants.py  ddp.cue  ddp_master.cue  ddp_workers.cue  foo  install_zutils.py  mypy_plugin.py  mypy_plugin_2.py  pyproject.toml  requirements.all.txt  requirements.modules.txt  requirements.pruned.txt  requirements.web_api.txt  requirements.web_api_gpu.txt  run_tests.py  setup.cfg  setup.py  (+9 more)
augmentations/: misalign.py
builder/: building.py  built_in_registrations.py  registry.py
cli/: __init__.py
common/: __init__.py  partial.py  timer.py  user_input.py
convnet/: simple_inference_runner.py  utils.py
dashboard/: next.config.js  package-lock.json  package.json
db_annotations/: deletion.py  layer.py
distributions/: __init__.py  common.py
docker/: Dockerfile.all  Dockerfile.all.p310  Dockerfile.all.p311  Dockerfile.all.p312.pypi  Dockerfile.all.p312.source  Dockerfile.all.p39  Dockerfile.all_pcg  Dockerfile.dev.cuda113  Dockerfile.inference  Dockerfile.inference.cuda113  Dockerfile.inference.p310  Dockerfile.inference.p39  Dockerfile.training  Dockerfile.training.cuda113  Dockerfile.training.p310  Dockerfile.training.p39
docs/: Makefile  requirements.txt
geometry/: bbox_strider.py
internal/: .gitignore  __init__.py  pyproject.toml
internal/.github/workflows/: testing.yaml
internal/alignment/: __init__.py  aced_relaxation.py  base_coarsener.py  base_encoder.py  common.py  defect_detector.py  field.py  misalignment_detector.py  resin_detector.py  sift.py
internal/alignment/flows/: __init__.py  aced_relaxation_flow.py  annotated_section_copy.py  common.py  compute_alignment_quality.py  compute_field_flow.py  compute_field_multistage_flow.py  warp_operation.py
internal/alignment/online_finetuner/: __init__.py  online_finetuner_metroem.py  online_finetuner_new.py
internal/meshing/: __init__.py  fragments.py  mesh_generation.py  shards.py
internal/montaging/: __init__.py  dumpster_relaxation.py  lens_correction.py  registry.py  rough_montaging.py  tiles.py
internal/portal_jobs/: __init__.py  common.py  smart_copy.py  smart_interpolate.py  smart_make_segment_mask.py
internal/regimes/: __init__.py  binary_supervised.py  common.py
internal/regimes/alignment/: __init__.py  base_encoder.py
internal/regimes/alignment/deprecated/: base_encoder.py  encoding_coarsener_gen_x1.py  minima_encoder.py  misalignment_detector.py
internal/regimes/segmentation/: base_affinity.py  base_embedding.py
internal/segmentation/: __init__.py  affs_inferencer.py  agglomeration.py  balance.py  cc.py  inference.py  loss.py  model_inferencer.py  watershed.py
internal/segmentation/embedding/: mean.py  utils.py
internal/segmentation/flows/: __init__.py  compare.py
internal/segmentation/flows/masks/: affinities.py
internal/skeletonization/: __init__.py  fragments.py  shards.py  skeleton_generation.py
internal/synapses/: __init__.py  syn_assignment.py  syn_neighbor.py
internal/synapses/postproc/: __init__.py  sv_lookup_hacky.py
internal/tests/alignment/: test_field.py  test_sift.py
internal/tests/portal_jobs/: test_common.py
internal/tests/segmentation/: test_agglomeration.py  test_watershed.py
kubernetes/: deplo_v0.yaml  deplo_v1.yaml  deplo_v3.yaml  inference_cpu_x0.yaml  inference_gpu_x0.yaml  inference_worker_x0.yaml  orig.yaml  session-manager-deployment.yaml  session-manager-rbac.yaml  session-manager-service.yaml  session-master-rbac.yaml  session-master-service.yaml  session-master-template.yaml  session-network-policy.yaml  session-reconcile-cronjob.yaml  session-reconcile-rbac.yaml  session-worker-service.yaml  session-worker-template.yaml
layer/: __init__.py  precomputed.py  protocols.py  tools_base.py
mazepa/: __init__.py  constants.py  exceptions.py  execution_checkpoint.py  execution_state.py  id_generation.py  progress_tracker.py  tasks.py
mazepa_addons/: __init__.py
mazepa_layer_processing/: operation_protocols.py
message_queues/: base.py
mnist/: __init__.py  c10d.yml  master.yml  train.py  workers.yml
notebook/: 231102_encoder_conv2.ipynb  231102_encoder_conv3.ipynb  convblock_new_post.ipynb  convblock_new_pre.ipynb  convblock_old.ipynb  test_affinity.ipynb  test_lightning_module.ipynb  test_zutils_rsunet.ipynb  test_zutils_rsunet_old.ipynb  test_zutils_rsunet_post.ipynb  test_zutils_rsunet_pre.ipynb
notebooks/: convblock_new_post.ipynb  convblock_new_pre.ipynb  convblock_old.ipynb
params/: layer_x0.cue  layer_x1.cue
run/: __init__.py  cli.py  resource.py
runbooks/: gcs-cost-verification.md
scripts/: assign_syn_simple.py  assign_synapses.py  benchmark_rigidity_map.py  cave_db_sql.py  cave_synapse_mgr.py  cave_to_precomp_lines.py  cleft_vs_gt.py  compute_contact_merge_metrics.py  csv_to_cave.py  cutie_mask_propagation.py  find_contacts.py  generate_everything_import.py  make_bucket  mito_lines-batch1.json  mito_lines-batch2.json  mito_merge.py  mito_stats-batch1.csv  mito_stats-batch2.csv  modify_synapse_clusters.py  organelle_merge.py  precomp_lines_to_cave.py  prof.txt  run_seg_contacts_mouse_parallel.sh  scale_csv.py  synapse_analysis.py  tmp.py  visualize_contact_filter_stats.py  visualize_contact_validation_results.py  visualize_filter_stats.py  visualize_validation_results.py
task_management/: task.py
tensor_ops/: generators.py  mask.py
test/: test_masks.py
tests/: CLAUDE.md  conftest.py  test_basic.py  test_basic_ops.py  test_bcube.py  test_convert.py  test_cue.py  test_masks.py  test_spec_parser.py  test_types.py  test_typing.py  test_volumetric.py  test_volumetric_layer.py
training/: data_loader.py
tutorial/: main.py  module.py
web_api/: .env.example  CLAUDE.md  (+10 more)
(+2237 files in other folders)
