[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 66.0.1", "wheel"]

[project]
authors = [{name = "Zetta AI Team", email = "sergiy@zetta.ai"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "attrs >= 23.2.0",
  "typeguard == 4.1.5",
  "cachetools >= 5.2.0",
  "fsspec >= 2022.8.2",
  "rich >= 12.6.0",
  "python-logging-loki >= 0.3.1",
  "neuroglancer >= 2.32",
  "dill >= 0.3.6",
  "pyyaml ~= 6.0.1",
  "requests==2.31.0", # version conflicts otherwise
  "requests-oauthlib==1.3.1", # version conflicts otherwise
  "cloud-files == 4.20.1",
  "packaging >= 23.2"
]
description = "Zetta AI Connectomics Toolkit"
keywords = ["neuroscience connectomics EM"]
license = {text = "MIT"}
name = "zetta_utils"
readme = "README.md"
requires-python = ">3.9,<3.12"
urls = {Homepage = "https://github.com/zettaai/zetta_utils"}
version = "0.0.2"

[project.optional-dependencies]
alignment = [
  "metroem @ git+https://github.com/ZettaAI/metroem.git",
  "torch >= 2.0",
]
all = ["zetta_utils[modules,docs,test]"]
augmentations = [
  "zetta_utils[tensor_ops]",
  "imgaug @ git+https://github.com/u7122029/imgaug.git@418f22d4275e9f90274900e27b595ed678bb4bcc",
  "imagecorruptions == 1.1.2",
  "torchvision"
]
cli = ["click == 8.0.1"]
cloudvol = [
  "cloud-volume == 8.27.0",
  "tensorstore == 0.1.33",
  "zetta_utils[tensor_ops]",
]
convnet = ["torch >= 2.0", "artificery >= 0.0.3.3"]
datastore = ["google-cloud-datastore"]
docs = [
  "piccolo_theme >= 0.11.1",
  "sphinx-autodoc-typehints == 1.14.1",
  "sphinx-notfound-page == 0.8.3",
  "sphinx_copybutton == 0.5.2",
  "sphinx_tabs == 3.2.0",
  "sphinx-prompt == 1.5.0",
  "sphinx_toolbox == 3.4.0",
  "sphinxcontrib-applehelp == 1.0.4",
  "sphinxcontrib-devhelp == 1.0.2",
  "sphinxcontrib-htmlhelp == 2.0.1",
  "sphinxcontrib-qthelp == 1.0.3",
  "sphinxcontrib-serializinghtml == 1.1.5",
]
gcfs-exceptions = [
  "gcsfs >= 2023.3.0",
  "aiohttp >= 3.8.4",
  "google-auth >= 2.17.1",
  "requests >= 2.28.1",
]
gcs = ["gcsfs >= 2022.7.1"]
slurm = [
  "simple_slurm"
]
mazepa = [
  "zetta_utils[gcfs-exceptions]", # Exceptions used by gcfs.retry
  "tenacity == 8.1.0", # 8.2 didn't type `retry` properly -- expects no args
  "pebble >= 5.0.3",
  "chardet == 5.0.0",
  "coolname >= 1.1.0",
  "task-queue >= 2.12.0",
  "boto3 == 1.28.4",
  "xxhash ~= 3.2.0",
]
mazepa-addons = [
  "zetta_utils[mazepa]",
  "kubernetes >= 25.3.0",
  "awscli == 1.29.4",
  "google-cloud-container",
  "google-api-python-client",
  "google-cloud-compute",
]
modules = [
  # put them in order of dependencies
  "zetta_utils[tensor_ops, viz, cli, gcs, slurm]",
  "zetta_utils[cloudvol,alignment]",
  "zetta_utils[training,mazepa]",
  "zetta_utils[mazepa_addons]",
  "zetta_utils[datastore]",
  "zetta_utils[segmentation]",
]
public = [
  # put them in order of dependencies
  "zetta_utils[tensor_ops, viz, cli, gcs]",
  "zetta_utils[cloudvol]",
  "zetta_utils[training,mazepa]",
  "zetta_utils[mazepa_addons]",
  "zetta_utils[datastore]",
]
segmentation = [
  "onnx >= 1.13.0",
  "onnxruntime-gpu >= 1.13.1",
  "scikit-learn >= 1.2.2",
  "lsds @ git+https://github.com/ZettaAI/lsd.git@cebe976",
  "abiss @ git+https://github.com/ZettaAI/abiss.git@1d1fc27",
]
tensor-ops = [
  "zetta_utils[tensor_typing]",
  "tinybrain",
  "affine >= 2.3.1",
  "connected-components-3d >= 3.10.0",
  "fastremap >= 1.12.2",
  "einops >= 0.4.1",
  "torchfields >= 0.1.2",
  "kornia >= 0.6.12",
]
tensor-typing = ["torch >= 2.0", "numpy >= 1.23.4"]
test = [
  "zetta_utils[types]",
  "pdbpp >= 0.10.3",
  "docker == 6.0.0",
  "black == 21.9b0",
  "click == 8.0.1", # for black to work
  "pydocstyle == 6.1.1",
  "flake8 == 4.0.1",
  "mypy == 1.5",
  "mypy-extensions == 1.0.0",
  "pytest == 7.1.1",
  "pytest-cov == 3.0.0",
  "coverage == 6.5.0",
  "pytest-mock == 3.8.2",
  "pylint == 2.13.9",
  "isort == 5.10.1",
  "pre-commit == 2.19.0",
  "moto == 4.1.0",
]
training = [
  "zetta_utils[tensor_ops,cloudvol,convnet,viz,gcs,augmentations]",
  "torch >= 2.0",
  "pytorch-lightning ~= 2.0.0", # mp dataloader causes segmentation faults with 2.1.0
  "torchmetrics == 0.11.4",
  "wandb >= 0.13.1",
  "kubernetes",
  "onnx >= 1.13.0",
  "onnxruntime-gpu >= 1.13.1",
  "zetta_utils[mazepa]",
]
types = [
  "types-Pillow == 9.3.0.1",
  "types-cachetools == 5.2.1",
  "types-requests == 2.28.11.7",
  "types-PyYAML == 6.0.12.12",
]
viz = [
  "zetta_utils[tensor_ops]",
  "matplotlib >= 3.5.2",
  "ipywidgets >= 7.7.0",
  "opencv-python-headless >= 4.5.5",
]

[project.scripts]
zetta = "zetta_utils.cli.main:cli"

[tool.setuptools]
py-modules = ["zetta_utils"]

[tool.black]
line-length = 99
target-version = ["py38", "py39"]

[tool.pylint.format]
max-line-length = 99
max-locals = 25

[tool.pylint.basic]
additional-builtins = '''reveal_type'''
good-names = '''sm,lr,ts,df,e,i,j,k,id,logger,n,on,tz,x,y,z,r,ex,ey,cv,s,f,v,a,b,mu,fn,fp,op,q,cf,tb,dx,dy,dz'''
[tool.pylint.message_control]
disable = '''duplicate-code,C0330,cyclic-import,too-many-arguments,missing-docstring,too-few-public-methods,logging-fstring-interpolation,logging-not-lazy,not-callable,no-member,unsubscriptable-object,pointless-string-statement,wrong-import-order,not-an-iterable,no-else-return,unsupported-membership-test,abstract-class-instantiated,unpacking-non-sequence'''
extension-pkg-allow-list = ["pymssql._mssql"]

[tool.pylint.miscellaneous]
notes = '''FIXME,XXX'''

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 4

[tool.pylint.main]
extension-pkg-whitelist = "numpy,cc3d,fastremap"
ignore-paths = ["^docs/*"]

[tool.pylint.options]
generated-members = "torch.*"

[tool.pytest.ini_options]
addopts = "-ra --cov=zetta_utils --cov-report=term-missing --strict-markers --ignore=.eggs --tb=short --junitxml=test-results.xml --cov-report=html --cov-report=xml"
norecursedirs = ".env .git .venv build dist "
python_files = "test.py tests.py test_*.py *_test.py"
testpaths = ["tests", "zetta_utils/alignment"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
plugins = "./mypy_plugin.py"
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.isort]
known_third_party = "wandb"
profile = "black"
skip = ["__init__.py"]
