[metadata]
name = ztutils 
version = "0.0.0"
description = My package description
long_description = file: README.rst
keywords = Connectomics, EM, Neuroscience 
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python_version>="3.8"  
    numpy 
    matplotlib
    torch

[options.extras_require]
test = 
    black ==21.9b0
    click ==8.0.1 # for black to work
    pre-commit ==2.19.0
    pydocstyle ==6.1.1
    flake8 ==4.0.1
    mypy ==0.960
    pytest ==7.1.2
    pytest-cov ==3.0.0
    isort ==5.10.1
    pylint ==2.13.9
    faker
    astroid


[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    ztutils.tests*

[tool:pytest]
addopts = --ignore **/*_tmp.py --ignore ./setup.py --cov-report term-missing --cov .

